circleci, eb 설정파일 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,9 @@ pip-selfcheck.json
 .idea/
 .python-version
 db.sqlite3
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+!.elasticbeanstalk/config.yml
