--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,53 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+
+  deploy:
+    docker:
+    - image: circleci/python:3.6.6
+
+    steps:
+    - checkout
+
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "requirements.txt" }}
+        - v1-dependencies-
+
+    - run:
+        name: install dependencies
+        command: |
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install -r requirements.txt
+
+    - save_cache:
+        paths:
+        - ./venv
+        key: v1-dependencies-{{ checksum "requirements.txt" }}
+
+    - run:
+        name: install aws client and elasticbeanstalk client
+        command: |
+          . venv/bin/activate
+          pip install awsebcli --upgrade
+          bash ./setup-eb.sh
+    - run:
+        name: deploy
+        command: |
+          . venv/bin/activate
+          eb deploy
+
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
