--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,20 +1,18 @@
 branch-defaults:
   master:
-    environment: AutodeployExample-env
-environment-defaults:
-  AutodeployExample-env:
-    branch: null
-    repository: null
+    environment: null
+    group_suffix: null
 global:
-  application_name: autodeploy-example
-  default_ec2_keyname: null
-  default_platform: arn:aws:elasticbeanstalk:ap-northeast-2::platform/Python 3.6 running
-    on 64bit Amazon Linux/2.7.5
+  application_name: mail
+  branch: null
+  default_ec2_keyname: aws-eb
+  default_platform: Python 3.6
   default_region: ap-northeast-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
   profile: eb-cli
+  repository: null
   sc: git
   workspace_type: Application
