--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.1.2
 djangorestframework==3.9.0
 dnspython==1.15.0
+gunicorn==19.9.0
 psycopg2-binary==2.7.5
 python-dateutil==2.7.5
 pytz==2018.6
